TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_before.dot
digraph AST {
  "138928279747216" [label="Start"];
  "138928279747216" -> "138928279748032";
  "138928279748032" [label="Code"];
  "138928279748032" -> "138928279743904";
  "138928279743904" [label="Function"];
  "138928279743904" -> "138928279743712";
  "138928279743904" -> "138928279748464";
  "138928279743904" -> "138928279744480";
  "138928279743712" [label="main IDENTIFIER"];
  "138928279748464" [label="Parameters"];
  "138928279744480" [label="Code"];
  "138928279744480" -> "138928279745776";
  "138928279744480" -> "138928279747984";
  "138928279744480" -> "138928279744192";
  "138928279745776" [label="Code"];
  "138928279745776" -> "138928279743952";
  "138928279743952" [label="Declaration"];
  "138928279743952" -> "138928279747408";
  "138928279743952" -> "138928279746352";
  "138928279747408" [label="x IDENTIFIER"];
  "138928279746352" [label="1 INT"];
  "138928279747984" [label="Code"];
  "138928279747984" -> "138928279744144";
  "138928279744144" [label="Declaration"];
  "138928279744144" -> "138928279740448";
  "138928279744144" -> "138928279740304";
  "138928279740448" [label="x IDENTIFIER"];
  "138928279740304" [label="2 INT"];
  "138928279744192" [label="Return"];
  "138928279744192" -> "138928279744048";
  "138928279744048" [label="0 INT"];
}
